# netdisk

./: .gitignore  Cargo.toml  README.md  info.cast
g3docs/: test.md
netdisk-core/: Cargo.toml  build.rs
netdisk-core/src/: io_basic.rs  lib.rs  netdisk_api.rs  netdisk_auth.rs  responses.rs
netdisk-core/src/endpoints/: responders.rs
netdisk-core/src/io_basic/: read_and_write.rs
netdisk-core/src/netdisk_api/: auth_api.rs  base_api.rs  file_api.rs  file_delete_api.rs  file_list_api.rs  file_move_api.rs  file_upload_api.rs  limit.rs  prelude.rs  share_file_api.rs  user_info_api.rs
netdisk-core/src/netdisk_auth/: basic_env.rs  config.rs
netdisk-core/src/responses/: auth_config.rs  base_config.rs  file_info.rs  prelude.rs  share_file_config.rs
netdisk-core/tests/: test_api.rs  test_basic_env.rs  test_config.rs  test_file_api.rs  test_io_basic.rs
python/: README.md  convert.py  data.json  data_to_db.py  movies.db  movies.json  sqlite.json
src/: main.rs
