[package]
name = "netdisk-core"
version = "0.1.0"
authors = ["bleedingfight <bleedingfight@gmail.com>"]
description = "Core APIs for netdisk"
license = "MIT OR Apache-2.0"
repository = "https://github.com/netdisk-rs/netdisk"
documentation = "https://docs.rs/hyper/"
rust-version = "1.63"
edition = "2021"
links = "netdisk-core"
build = "build.rs"
readme = "README.md"

# Some dependencies may not be their latest version, in order to support older rustc.
[dependencies]
crossbeam-deque = "0.8.6"
crossbeam-utils = "0.8.21"
wasm_sync = { version = "0.1.2", optional = true }
base64 = "0.22.0"
toml = "0.9.7"
dirs = "6.0.0"
base62 = "2.2.3"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde", "std"] } 
log = "0.4"
env_logger = "0.11"
home = "0.5"
tempfile = "3"
actix-web = "4"
actix-files = "0.6"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread"] }


[dev-dependencies]
rand = "0.9.2"
criterion = "0.7.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread","fs"] }


[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

